<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal">
       
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:padding="6dip" >

        <Button
            android:id="@+id/placesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/places" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="33dp"
            android:text="@string/profile" />

        <Button
            android:id="@+id/reportButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/placesButton"
            android:layout_alignBottom="@+id/placesButton"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/placesButton"
            android:text="@string/report" />

    </RelativeLayout>

 <RelativeLayout
        android:layout_width="fill_parent"
        android:padding="6dip"
        android:layout_height="?android:attr/listPreferredItemHeight">
        <ImageView
            android:id="@+id/user_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="6dip" />
        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/user_pic" />
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt"
            android:layout_toRightOf="@id/user_pic"/>     
    </RelativeLayout>

 <ProgressBar
     android:id="@+id/progressbar"
     style="?android:attr/progressBarStyleHorizontal"
     android:layout_width="198dp"
     android:layout_height="wrap_content"
     android:max="100" />
  <TextView
     android:id="@+id/tv_score"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
             />

  <RatingBar
      android:id="@+id/ratingBar1"
      style="@style/smokingRatingBar"
      android:layout_width="wrap_content"
      android:layout_height="75dp"
      android:numStars="5"
      android:stepSize="1" />

  <Button
      android:id="@+id/exitButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:text="@string/exit" />
	
</LinearLayout>
