<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/brownlinesbg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="The Reporter"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/MainFirstRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <il.reporter.gws.LoginButton
            android:layout_alignParentRight="true"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_button" />

        <ImageView
            android:id="@+id/user_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/MainSecondRL"
        android:layout_width="300dp"
        android:layout_height="144dp"
        android:layout_below="@+id/MainFirstRL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu" />

        <Button
            android:id="@+id/reportButton"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/empty"
            android:text="@string/smoking"
            android:textColor="#9dcff0"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/hazardsButton"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="23dp"
            android:background="@drawable/empty"
            android:text="@string/hazards"
            android:textColor="#9dcff0"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginTop="95dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/empty"
            android:text="@string/profile"
            android:textColor="#9dcff0"
            android:textSize="18dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/Credits"
        android:textColor="#ffffff" />

    <ImageButton
        android:id="@+id/question"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/qm" />

</RelativeLayout>